--- a/style/style-laptop/style-lap.css
+++ b/style/style-laptop/style-lap.css
@@ -11,7 +11,8 @@
   box-sizing: border-box; 
   list-style: none;
   text-decoration: none;
-  color: var(--bgcolor);
+  /* color: var(--bgcolor); */
+  color: var(--colorfooter);
 }
 body{
     background: var(--bgcolor);
